--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,16 @@
 <!doctype  html>
+{% load static %}
 <html  lang="ru">
 <head>
 <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
 <title>Django Authentication Example</title>
 </head>
 <body>
+
+<a href="admin/">админ</a>
+<a href="{% url 'new_document' %}">Добавить документ</a>
+<a href="{% url 'new_categori' %}">Добавить категорию</a>
+
   <div  class="container">
     <div  class="row justify-content-center">
       <div  class="col-4">
