'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул'

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,10 @@
 <body>
 
 <a href="admin/">админ</a>
+<a href="{% url 'artikul' %}" class="stretched-link text-succes">Новый артикул</a>
 <a href="{% url 'new_document' %}">Добавить документ</a>
 <a href="{% url 'new_categori' %}">Добавить категорию</a>
+<a href="{% url 'adres' %}">Новый адрес</a>
 
   <div  class="container">
     <div  class="row justify-content-center">
