'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул' 'артикул добавлены поля' 'страницы list detail'

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 <a href="{% url 'new_document' %}">Добавить документ</a>
 <a href="{% url 'new_categori' %}">Добавить категорию</a>
 <a href="{% url 'adres' %}">Новый адрес</a>
+<a href="{% url 'adresa' %}">Список</a>
 
   <div  class="container">
     <div  class="row justify-content-center">
