'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул' 'артикул добавлены поля' 'страницы list detail' 'menu'

--- a/dom/templates/dom/base.html
+++ b/dom/templates/dom/base.html
@@ -44,7 +44,7 @@ element.innerHTML = "Меняем текст добавив к элементу 
 
     </div>
 
-    {% include "dom/includes/menu.html" %}
+    {% include "dom/menu.html" %}
     <div class="w3-panel w3-green">
         <p>Панель с отступами </p>
     </div>
@@ -108,6 +108,6 @@ document.getElementById("p2").style.fontSize = "larger";
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
-
+</div>
 </body>
 </html>
