--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,12 @@
 <html  lang="ru">
 <head>
 <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Django Authentication Example</title>
 </head>
 <body>
@@ -13,6 +19,7 @@
 <a href="{% url 'new_categori' %}">Добавить категорию</a>
 <a href="{% url 'adres' %}">Новый адрес</a>
 <a href="{% url 'adresa' %}">Список</a>
+<a href="{% url 'poisk' %}">Поиск</a>
 
   <div  class="container">
     <div  class="row justify-content-center">
