--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,10 @@
-{% extends  'base.html' %}
+{% extends  'dom/index.html' %}
 {% load crispy_forms_tags %}
 
 {% block main %}
 <div class="card">
 <div class="card-body">
-<h4 class="card-title">Log in to your account</h4>
+<h4 class="card-title">Вход </h4>
 
 <form method="post">
 {% csrf_token %}
@@ -12,7 +12,8 @@
 
 {{ form|crispy }}
 
-<button type="submit" class="btn btn-primary btn-block">Log in</button>
+<button type="submit" class="btn btn-primary btn-block">Войти</button>
+
 </form>
 </div>
 </div>
