'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул' 'артикул добавлены поля' 'страницы list detail' 'menu' 'commit ' 'bulma shablon' 'todolist'

--- a/dom/templates/dom/menu.html
+++ b/dom/templates/dom/menu.html
@@ -14,7 +14,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Магазин</a>
+        <a class="nav-link" href="{% url 'TodoList' %}">Магазин</a>
       </li>
 
       <li class="nav-item dropdown">
