--- a/dom/templates/dom/menu.html
+++ b/dom/templates/dom/menu.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<nav class="navbar navbar-expand-sm bg-light mt-3">
+
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/admin"> Aдмин <span class="sr-only">(current)</span></a>
@@ -42,7 +42,7 @@
       <input class="form-control mr-sm-2" type="search" placeholder="поиск" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
     </form>
-  </div>
+
 
 </nav>
 
