--- a/todolist/templates/todolist/base.html
+++ b/todolist/templates/todolist/base.html
@@ -13,7 +13,7 @@
 	<nav class ="navbar is-success" role="navigation" aria-label="main navigation">
      	<div class="navbar-menu ">
         	<div class="navbar-start">
-        	<a class="navbar-item" href=" {% url 'zadacha' %}"> Категории</a>
+        	<a class="navbar-item" href=" {% url 'category' %}"> 1Категории</a>
         	<a class="navbar-item" href="{% url 'TodoList' %}"> Список дел </a>
         	</div>
          </div>
