--- a/dom/templates/dom/menu.html
+++ b/dom/templates/dom/menu.html
@@ -30,6 +30,7 @@
           <a href="{% url 'artikul' %}" class="dropdown-item">Новый артикул</a>
           <a href="{% url 'new_document' %}" class="dropdown-item">Добавить документ</a>
           <a href="{% url 'new_categori' %}" class="dropdown-item">Добавить категорию</a>
+          <a href="{% url 'new_person' %}" class="dropdown-item">Добавить пользователя</a>
           <a class="dropdown-item" href="{% url 'adres' %}">Новый адрес</a>
 
 
