--- a/dom/templates/dom/search_list.html
+++ b/dom/templates/dom/search_list.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Поиск</h1>
 
-<form action="{% url 'search' %}" method="get" value="q">
+<form action="{% url 'search' %}" method="get" value="123">
   <input name="q" type="text" placeholder="Найти..." >
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
 </form>
@@ -30,7 +30,7 @@
 
     <li>
       Уникальная ссылка -
-        <a href="/adresa/{{ ar.slug }}">Ссылка </a>
+        <a href="/dom/adresa/{{ ar.slug }}">Ссылка </a>
     </li>
     </ul>
         </div>
