--- a/dom/templates/dom/forms/categori_form.html
+++ b/dom/templates/dom/forms/categori_form.html
@@ -13,14 +13,22 @@
 <h1>Добавить категорию</h1>
 
 <div class="card">
-<div class="card-body">
-<h4 class="card-title">Новая категория</h4>
+     <div class="card-header">
+          <div class="card-body">
+
 
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form|crispy }}
+
+    <h4 class="card-title">Новая категория</h4>
+    <p class="card-text">{{ form.name}} </p>
+    <p>Подробное описание</p>
+   <p > {{ form.description }}</p>
+
+
     <p><input type="submit" value="Сохранить"></p>
 </form>
+</div>
 </div>
 </div>
 </body>
