'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул' 'артикул добавлены поля' 'страницы list detail' 'menu' 'commit ' 'bulma shablon' 'todolist' 'commit' 'поиск' 'poisk' 'prodavcu.html - продолжить' 'prodavcu'

--- a/dom/templates/dom/info/prodavcu.html
+++ b/dom/templates/dom/info/prodavcu.html
@@ -55,55 +55,206 @@
 
 
 <!-- Блок трех колонок -->
-
+<hr color="green" width="400" >
+<hr color="green" width="300" >
 <div class="container">
     <div class="row">
-        <div class="col-sm-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Шаг 2</h3>
-                    <p  class="card-text">
-                    <p  class="card-text">Как покупатель узнает о том что Вы продаете ?</p>
-                    <p>Необходимо размещение информации о продаваемом объекте</p>
-                    <p>Фото, видео, текст, цена.</p>
-                    <p><a href="http://www.prodaznik.ru/article/100-reklamy-svoego-biznesa-kak-iskat-klientov" target="_blank">
-                        100+</a> способов рекламы вашего объекта. </p>
-                    
-                </div>
-            </div>
-        </div>
-
-
-
-        <div class="col-sm-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Шаг 1</h3>
-                    <p  class="card-text">Что продаете ?</p>
-                    <p  class="card-text">Представьте что Вы покупатель недвижимости.</p>
-                    <p  class="card-text">Нужно больше информации о продаваемом объекте</p>
-                    <p  class="card-text">Важно все, правильно сфотографировать</p>
-
-                </div>
-            </div>
-        </div>
-
-
+<!--Первая колонка Документы -->
         <div class="col-sm-4">
             <div class="card bg-light">
                 <div class="card-body">
-                    <h3 class="card-title">Как</h3>
-                    <p  class="card-text">Анонимно без регистрации.</p>
-                    <p  class="card-text">Использовать личный кабинет.</p>
+                    <h3 class="card-title">Шаг 0</h3>
+                    <hr>
+                    <h5>Документы</h5>
+                    <p>Запишите <a href="https://pkk.rosreestr.ru/#/search/66.08075299999886,100.05436299999829/3/@d98n7zxh"
+                     target="_blank">
+                        кадастровый номер
+                    </a>своего объекта</p>
+                    <p  class="card-text">Подготовьте покупателю сведения что недвижимость не в
+                        <a href="https://egrnreestr.ru/articles/kak-proverit-nedvizhimost-na-zalog" target="_blank">
+                            залоге</a> и нет <a href="https://roskad.com/proverit-kvartiru-arest-zalog" target="_blank">
+                            ареста  </a>. </p>
+                    <p  class="card-text">Проверьте в <a href="https://rosreestr.gov.ru/wps/portal/online_request"
+                                                         target="_blank">росреестре</a> информацию. Закажите выписку ЕГРН</p>
+                    <p></p>
                 </div>
             </div>
         </div>
 
+<!-- Вторая колонка Подготовка информации -->
+        <div class="col-sm-4">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h3 class="card-title">Шаг 1</h3>
+                    <hr>
+                    <h5>Подготовка информации</h5>
+                    <p  class="card-text">Что продаете ?</p>
+                    <p  class="card-text">Много людей должны узнать о продаже. </p>
+                    <p  class="card-text">Увидеть, услышать, прочитать о продаваемом объекте.</p>
+                    <p  class="card-text">
+                        <a href="https://kvartira-bez-agenta.ru/melochi/kak-pravilno-fotografirovat-kvartiru-dlya-prodazhi/"
+                           target="_blank">Фотографируйте</a>, снимайте
+                        <a href="https://www.domaza.ru/%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE_360_%D0%B8_%D0%BD%D0%B5%D0%B4%D0%B2%D0%B8%D0%B6%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D1%8C_%D1%87%D0%B5%D0%BC_%D0%BF%D0%BE%D0%BB%D0%B5%D0%B7%D0%B5%D0%BD_%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE%D0%BC%D0%B0%D1%80%D0%BA%D0%B5%D1%82%D0%B8%D0%BD%D0%B3_%D0%B4%D0%BB%D1%8F_%D1%80%D0%B8%D0%B5%D0%BB%D1%82%D0%BE%D1%80%D0%BE%D0%B2/">
+                         видео </a>, пишите <a href="http://comagency.ru/tekst-o-nedvizhimosti" target="_blank">
+                        текст</a>.</p>
+
+                </div>
+            </div>
+        </div>
+
+
+<!-- Третья колонка Размещение -->
+         <div class="col-sm-4">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h3 class="card-title">Шаг 2</h3>
+                    <hr>
+                    <h5>Размещение</h5>
+                    <p  class="card-text">
+                    <p  class="card-text">Подготовили информацию? Хорошо.</p>
+                    <p>Начинайте размещение информации о продаваемом объекте</p>
+                    <p>Фото, видео, текст, цена.</p>
+                    <p><a href="http://www.prodaznik.ru/article/100-reklamy-svoego-biznesa-kak-iskat-klientov" target="_blank">
+                        100+</a> способов рекламы вашего объекта. </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
+<hr>
+<hr>
+
+<h5 class="text-center m-5">От опытного продавца недвижимости.</h5>
+
+<div class="container">
+    <div class="row">
+<!--Первая колонка нет звонков-->
+        <div class="col-sm-4">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h3 class="card-title">Нет звонков</h3>
+                    <hr>
+                    <h5>Сравните цены</h5>
+                    <p>Принцип  <a href="https://realty.rbc.ru/news/58d11b609a79471e9822d53e"
+                     target="_blank">
+                        Паретто
+                    </a>в продаже недвижимости</p>
+                    <p  class="card-text">Какая цена подобных вашему объекту
+                        <a href="https://www.gdeetotdom.ru/articles/2034770-2014-12-09-kak-rabotaet-s-tsenoj-rieltor/" target="_blank">
+                            Пример</a> работы  городского риэлтора с ценой. </p>
+                    <p  class="card-text">Покупатели сравнивают стоимость.
+                    Звонят на объекты подешевле...</p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Вторая колонка-->
+        <div class="col-sm-4">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h3 class="card-title">Цена</h3>
+                    <hr>
+                    <h5>Мысли продавца</h5>
+                    <p  class="card-text">Я столько сюда вложил...</p>
+                    <p  class="card-text">Мне ничего не останется...</p>
+                    <p  class="card-text">Не хватит на покупку жилья в городе...</p>
+                    <p  class="card-text">Наша недвижимость для нас, всегда стоит больше, чем нам предлагают. В ней
+                        не только строительные материалы , но и часть души.</p>
+
+                </div>
+            </div>
+        </div>
 
 
+        <!-- Третья колонка-->
+        <div class="col-sm-4">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <h3 class="card-title">Время</h3>
+                    <hr>
+                    <h5>И цена.</h5>
+                    <p  class="card-text">Можно ставить стоимость не смотря на рыночные цены.</p>
+                    <p>Получить эту стоимость с помощью времени и инфляции.</p>
+                    <p>Пройдет год или 20 лет и желаемая цена выровняется с рыночной и продажа состоится</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr>
+<hr>
+
+<div class="container">
+    <div class="row ">
+        <div class="col-2">
+
+        </div>
+        <div class="col-8">
+            <h1 class="center">Рынок</h1>
+            <div class="container">
+                <div class="jumbotron mt-3">
+                    <p>Рынок недвижимости отличается от рынка овощей, но суть та же -</p>
+                    <h4>Покупатель выбирает</h4>
+                    <p>Какую цену поставить на твою недвижимость поможет прогулка по картофельному ряду на рынке.</p>
+                    <p>Цены на картофель приблизительно одинаковые. Мелкая дешевле, крупная подороже, домашняя - еще дороже.</p>
+                    <p>Видим цену и картофель - все понятно. Сделали выбор - купили.</p>
+                    <p>В этом ряду мы не увидим продавца с мелкой и грязной картошкой по цене домашней. </p>
+                    <p>Такой продавец не нужен покупателю, зачем покупать дорого, рядом лучше и дешевле.</p>
+                    <p> Всё, картофель выбрали и купили переходим к недвижимости.</p>
+                    <h4>Цена вашей недвижимости.</h4>
+                    <p>Уберите в сторону эмоции и чувства, забудьте сколько вложили и пройдитесь
+                        по рядам продажи недвижимости в роли покупателя.</p>
+                    <p>Начинайте сравнивать свою цену на недвижимость с другими</p>
+                    <p>Вы решили поставить стоимость 2 000 000 рублей</p>
+                    <p>Посмотрите на <a href="https://ru.wikipedia.org/wiki/%D0%A0%D1%8B%D0%BD%D0%BE%D0%BA_%D0%BD%D0%B5%D0%B4%D0%B2%D0%B8%D0%B6%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B8" target="_blank">
+                     рынке недвижимости </a> что можно купить за эту цену?</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-2">
+
+        </div>
+    </div>
+
+</div>
+
+
+<hr>
+<hr>
+
+<div class="container">
+    <div class="row ">
+        <div class="col-2">
+
+        </div>
+        <div class="col-8">
+            <h1 class="center">Рабочий кабинет</h1>
+            <div class="container">
+                <div class="jumbotron mt-3">
+                    <p>Бесплатная площадка для размещения инфорации о недвижимости,
+                    покупатели звонят на указанный Вами телефон.</p>
+                    <h4>Бесплатно и платно.</h4>
+                    <p>Разместить информацию на сайте имеет право только реальный человек, подтвердивший личность.</p>
+                    <p>10 фото, ссылку на видео, текст 3000 знаков, контактный номер телефона, характеристики недвижимости
+                     - бесплатно. Срок размещения - 5 лет.</p>
+                    <p>Так же в рабочем кабинете доступно подключение платных опций, по мнению admin
+                    для продажи недвижимости от собственника достаточно бесплатного набора.</p>
+                    <p> Платные опции подойдут агентам или агенствам - партнерам сайта.</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-2">
+
+        </div>
+    </div>
+
+</div>
 
 
 {% endblock content_center %}
