--- a/dom/templates/dom/content_center/zagolovok.html
+++ b/dom/templates/dom/content_center/zagolovok.html
@@ -1,8 +1,7 @@
 
 <!-- Заголовок -->
 <div class="jumbotron text-center">
-    <h1>Сельская недвижимость. Знакомство.</h1>
-    <p>Как? Зачем? Кому?</p>
+    <h1>Сельская недвижимость.</h1>
 </div>
 
 <!-- Блок трех колонок -->
@@ -15,7 +14,7 @@
                     <h3 class="card-title">Кому</h3>
                     <p  class="card-text">
                         <a href="{% url 'prodavcu' %}"> Продавцам</a> и покупателям</p>
-                    <p  class="card-text">Юристам и мастерам</p>
+                    <p  class="card-text"><a href="{% url 'partner' %}">Юристам и мастерам</a></p>
                 </div>
             </div>
         </div>
