--- a/dom/templates/dom/info/partner.html
+++ b/dom/templates/dom/info/partner.html
@@ -52,7 +52,7 @@
         <div class="col-sm-2">
         </div>
 
-        <div class="col-sm-7">
+        <div class="col-sm-7git status">
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -84,8 +84,6 @@
                 </tbody>
             </table>
         </div>
-
-
         <div class="col-sm-2">
         </div>
     </div>
