'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул' 'артикул добавлены поля' 'страницы list detail' 'menu' 'commit ' 'bulma shablon' 'todolist' 'commit' 'поиск' 'poisk' 'prodavcu.html - продолжить' 'prodavcu' 'poisk' 'fotodom'

--- a/dom/templates/dom/menu.html
+++ b/dom/templates/dom/menu.html
@@ -32,6 +32,7 @@
           <a href="{% url 'new_document' %}" class="dropdown-item">Добавить документ</a>
           <a href="{% url 'new_categori' %}" class="dropdown-item">Добавить категорию</a>
           <a href="{% url 'new_person' %}" class="dropdown-item">Добавить пользователя</a>
+          <a href="{% url 'addfotodom' %}" class="dropdown-item">Добавить фото дома</a>
           <a class="dropdown-item" href="{% url 'adres' %}">Новый адрес</a>
 
 
