'dom', 'Добалена модель DomDokument' 'Добавлена модель адрес' 'добавлен артикул' 'артикул добавлены поля' 'страницы list detail' 'menu' 'commit ' 'bulma shablon' 'todolist' 'commit' 'поиск' 'poisk' 'prodavcu.html - продолжить' 'prodavcu' 'poisk' 'fotodom' 'страница ponjanie_ceni добавить прайсы'

--- a/dom/templates/dom/content_center/zagolovok.html
+++ b/dom/templates/dom/content_center/zagolovok.html
@@ -26,7 +26,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Зачем</h3>
                     <p  class="card-text">Общение без посредников</p>
-                    <p  class="card-text">Понятные цены</p>
+                    <p  class="card-text">Понятные <a href="{% url 'ceni' %}">цены</a></p>
                 </div>
             </div>
         </div>
