--- a/dom/templates/dom/info/partner.html
+++ b/dom/templates/dom/info/partner.html
@@ -35,8 +35,8 @@
         <h5>Основа партнерства с сайтом</h5>
         <ul>
             <li>Цену выполнения работ клиент обязан знать до начала исполнения</li>
-            <li>Полная открытость. Стоимость выполнения работ не выше представленного ниже прайса</li>
-            <li>Разрешение на размещение отзывов от клиентов о выполненной работе</li>
+            <li>Полная открытость. Стоимость выполнения работ не выше нашего прайса</li>
+            <li>Разрешение на размещение отзывов клиентов о выполненной работе</li>
             <li>Договор с сайтом.</li>
         </ul>
     </div>
@@ -88,8 +88,6 @@
         </div>
     </div>
 </div>
-
-
 
 {% endblock content_center %}
 
