--- a/dom/templates/dom/base.html
+++ b/dom/templates/dom/base.html
@@ -6,6 +6,9 @@
     {% block metaname %}
     <link rel="stylesheet" type="text/css" href="{% static '/dom/css/dom.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <svg class="bi bi-chevron-right" width="32" height="32" viewBox="0 0 20 20" fill="currentColor"\
+         xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010\
+          .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
