--- a/dom/templates/dom/index.html
+++ b/dom/templates/dom/index.html
@@ -26,7 +26,7 @@
         <h3>Первый деловой - НЕДВИЖИМОСТЬ .</h3>
         <a href="#" data-toggle="popover" title="Назначение сайта" data-content="Бесплатная площадка для
   размещения объектов недвижимости. Публикуйте, ищите, нанимайте. Общение без посредников. Личный
-рабочий кабинет. Поиск и размещение сельской недвижимости.">ИНФО</a>
+рабочий кабинет. Найти недвижимость. Опубликовать объявление. Нанять специалиста.">ИНФО</a>
     </div>
 </div>
 
@@ -85,7 +85,6 @@ $(document).ready(function(){
 });
 </script>
 {% endblock script%}
-
 
 </body>
 </html>
