--- a/dom/templates/dom/info/prodavcu.html
+++ b/dom/templates/dom/info/prodavcu.html
@@ -236,7 +236,7 @@
             <h1 class="center">Рабочий кабинет</h1>
             <div class="container">
                 <div class="jumbotron mt-3">
-                    <p>Бесплатная площадка для размещения инфорации о недвижимости,
+                    <p>Бесплатная площадка для размещения информации о недвижимости,
                     покупатели звонят на указанный Вами телефон.</p>
                     <h4>Бесплатно и платно.</h4>
                     <p>Разместить информацию на сайте имеет право только реальный человек, подтвердивший личность.</p>
@@ -255,7 +255,78 @@
     </div>
 
 </div>
+<hr>
+<hr>
 
 
+<div class="container">
+    <div class="row ">
+        <div class="col-2">
+
+        </div>
+        <div class="col-8">
+            <h1 class="center">Публикация информации о недвижимости</h1>
+            <div class="container">
+                <div class="jumbotron mt-3">
+                    <h3>Бесплатно</h3>
+                    <p>Позвоните в офис и назначте встречу.</p>
+                    <p>Возьмите паспорт и документ подтверждающий право на собственность.</p>
+                    <p>Посетите офис партнера сайта в Вашем населенном пункте</p>
+                    <p>Подайте заявление на получение артикула</p>
+                    <p>Разместить информацию на сайте имеет право только реальный человек, подтвердивший личность.</p>
+                    <p>Задача партнера проверить документы и выдать вам - артикул.</p>
+                    <p>Так же в рабочем кабинете доступно подключение платных опций, по мнению admin
+                    для продажи недвижимости от собственника достаточно бесплатного набора.</p>
+                    <p> Платными опциями пользуются агенты и агенства - партнеры сайта.</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-2">
+
+        </div>
+    </div>
+
+</div>
+<hr>
+<hr>
+
+
+<div class="container">
+    <div class="row ">
+        <div class="col-2">
+
+        </div>
+        <div class="col-8">
+            <h1 class="center">Публикация информации о недвижимости</h1>
+            <div class="container">
+                <div class="jumbotron mt-3">
+                    <h3>Платно</h3>
+                    <p>Пользователь имеет право заказать публикацию за оплату.</p>
+                    <p> ADMIN: напоминаем - разместить публикацию вы можете самостоятельно и бесплатно. </p>
+                    <p>2000 рублей - Полный комплекс работ по публикации объявления.</p>
+                    <p>Едем фотографируем</p>
+                    <p>В офисе редактируем фото - размер, вес, формат.</p>
+                    <p>Пишем продающий текст.</p>
+                    <p>Складываем готовые файлы в отдельную папку.</p>
+                    <p>Получаем артикул.</p>
+                    <p>Регистрируемся на сайте</p>
+                    <p>Файлы из папки публикуем в интернет.</p>
+                    <p>Регистрируем новый почтовый ящик.</p>
+                    <p>Регистрационные данные передаем заказчику.</p>
+                    <p>Работа окончена. Срок размещения объявления 5 лет.</p>
+
+
+                </div>
+            </div>
+        </div>
+        <div class="col-2">
+
+        </div>
+    </div>
+
+</div>
+<hr>
+<hr>
 {% endblock content_center %}
 
