--- a/dom/templates/dom/pokaz/adres_list.html
+++ b/dom/templates/dom/pokaz/adres_list.html
@@ -34,8 +34,8 @@
             <p>6{{ dom.n_kvartiri }}</p>
             <p>7{{ dom.n_podezda }}</p>
 
-            <a>8{{ dom.slug }} Слаг</a>
-            <a href="/dom/adresa/{{ dom.slug }}">Ссылка</a>
+
+            <a href="/dom/adresa/{{ dom.slug }}">Ссылка1</a>
 
             {% if dom.is_activ %}
             <p>9Размещен на сайте</p>
