--- a/dom/templates/dom/content_center/zagolovok.html
+++ b/dom/templates/dom/content_center/zagolovok.html
@@ -45,4 +45,17 @@
     </div>
 </div>
 
+<div class="container mt-5">
+    <div class="row">
+        <div class="col sm-4">
+            <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Продать</a>
+        </div>
+         <div class="col sm-4">
+            <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Купить</a>
+        </div>
+         <div class="col sm-4">
+             <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Заработать</a>
 
+        </div>
+    </div>
+</div>
