--- a/urokipy/templates/urokipy/stroki.html
+++ b/urokipy/templates/urokipy/stroki.html
@@ -21,6 +21,7 @@
 <div class="container mt-5">
     <div class="row ">
         {% for karta in kartochki %}
+
         <div class="col s4">
             <div class="row">
 
@@ -28,8 +29,11 @@
                     <div class="card blue-grey darken-1">
                         <p>{{ karta.pub_date|date }}</p>
                         <div class="card-image">
+                            {% if karta.image %}
                             <img src="{{ karta.image.url }}" alt="{{ karta.alt}}" width="189" height="255">
-
+                            {% else %}
+                            <img src="#" alt="">
+                             {% endif %}
                         </div>
                         <div class="card-content white-text">
                             <span class="card-title">{{ karta.title}}</span>
@@ -43,6 +47,7 @@
                 </div>
             </div>
         </div>
+
         {% endfor %}
 
         <div class="col s4">
